# MEIC-with-Dash-main-V2

./: .env.example  .gitignore  QUICK-START.md  README.md  SERVER-SETUP-PROMPT.md  SYSTEM_GAPS Claude.md  SYSTEM_GAPS.md  TESTING.md  V2_README.md  pyproject.toml  requirements.txt  run.py  secrets_template.json
auth/: config.py  generate_token.py  refresh_token.py  slack_alert.py  util.py
blocks/: README.md
brokers/: __init__.py  base.py  paper_broker.py  tastytrade_broker.py
changes/: ACCOUNT_WIDE_REST_GOVERNOR_REPORT.md  CHANGES_SINCE_2026-07-06.md  DASHBOARD_IMPLEMENTATION.md  DISCORD_MEIC_SANG.md  ENTRY_MONITOR_CSV_OWNERSHIP.md  GAP_ANALYSIS.md  INCIDENT_2026-06-22_STOP_AND_LONG_CLOSE.md  LIVE_SESSION_2026-06-26.md  LIVE_SESSION_2026-06-29.md  LIVE_SESSION_2026-06-30.md  LIVE_SESSION_2026-07-01.md  LIVE_SESSION_2026-07-02.md  LIVE_SESSION_2026-07-06.md  LIVE_SESSION_2026-07-07.md  LIVE_SESSION_2026-07-08.md  LIVE_SESSION_2026-07-09.md  LIVE_SESSION_2026-07-13.md  LIVE_SESSION_2026-07-20.md  LIVE_SESSION_2026-07-21.md  LIVE_SESSION_2026-07-22.md  LIVE_SESSION_2026-07-23.md  MANUAL_STRATEGY.md  MARKET_DATA_EXPANDED_WATCH_DESIGN.md  MEIC_to_Tasty_Project_Plan.md  MIDNIGHT_EXPIRED_TRADE_STOP_RETRY_FIX.md  MULTI_STRATEGY_ARCHITECTURE_REVIEW_REFINED_V4.md  OPERATIONAL_HARDENING.md  PENDING_MEIC_STOPS_2026-07-07.md  PHASE1_FILL_PROVENANCE_REPORT.md  PHASE2_ADAPTIVE_RECONCILE_REST_OBSERVABILITY_REPORT.md  PHASE3_MQTT_SOURCE_PROVENANCE_REPORT.md  PHASE4_FILL_TIME_BREACH_SAFETY_REPORT.md  PHASE5_MQTT_ENTRY_FALLBACK_REPORT.md  PHASE6_DASHBOARD_RUNTIME_STATUS_REPORT.md  (+17 more)
(+334 files in other folders)
